--- a/src/styles/todoList.scss
+++ b/src/styles/todoList.scss
@@ -58,10 +58,5 @@
 		flex-direction: column;
 		align-items: stretch;
 		justify-content: flex-start;
-		.start-title {
-			text-align: center;
-			height: 100%;
-			padding-bottom: 10em;
-		}
 	}
 }
